--- a/LiveMapDashboard.Web/Views/Map/Index.cshtml
+++ b/LiveMapDashboard.Web/Views/Map/Index.cshtml
@@ -1,51 +1,8 @@
-﻿@using LiveMap.Domain.Models
-@using LiveMapDashboard.Web.Models.Map
+﻿@using LiveMapDashboard.Web.Models.Map
 @model MapListViewModel
 
-<div class="max-w-10xl pt-2 px-4 sm:px-6 lg:px-6 lg:pt-2 mx-auto">
-    <h1 class="text-4xl dark:text-white">Maps</h1>
-    <br />
+@await Component.InvokeAsync("MapList", Model)
 
-    <div class="flex flex-col">
-        <div class="-m-1.5 overflow-x-auto">
-            <div class="p-1.5 min-w-full inline-block align-middle">
-                @if (Model.Result.TotalCount > 0)
-                {
-                    <div class="border border-gray-200 rounded-lg overflow-hidden dark:border-neutral-700">
-
-                        <table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700">
-                            <thead>
-                                <tr>
-                                    <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">Map Name</th>
-                                    <th scope="col" class="px-6 py-3 text-end text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">Actions</th>
-                                </tr>
-                            </thead>
-                            <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
-                                @foreach (Map map in Model.Result.Items)
-                                {
-                                    <tr>
-                                        <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">
-                                            @map.Name
-                                        </td>
-                                        <td class="px-6 py-4 whitespace-nowrap text-end text-sm font-medium">
-                                            <a asp-action="form" asp-controller="Map" asp-route-id="@map.Id"
-                                               class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 focus:outline-hidden focus:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400 dark:focus:text-blue-400">
-                                               Edit
-                                            </a>
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-                        </table>
-                    </div>
-
-                    @await Html.PartialAsync("Table/_TablePagination")
-                }
-                else
-                {
-                    <p class="dark:text-white">Er zijn geen request for changes</p>
-                }
-            </div>
-        </div>
-    </div>
-</div>
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
