--- a/LiveMapDashboard.Web/Views/Shared/Components/RfcForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/RfcForm/Default.cshtml
@@ -69,7 +69,7 @@
         <div class="flex flex-col bg-white border border-gray-200 shadow-2xs rounded-xl dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70">
             <div class="p-4 md:p-5">
                 <h3 class="text-lg font-bold text-gray-800 dark:text-white">
-                    Card title
+                    Request for Change:
                 </h3>
                 <p class="mt-1 text-gray-500 dark:text-neutral-400">
                     @Model.Rfc.Message
@@ -149,6 +149,7 @@
                 <div class="mt-1 p-4 relative z-10 bg-white border border-gray-200 rounded-xl sm:mt-4 dark:bg-neutral-900 dark:border-neutral-700">
                     @Html.EditorFor(m => m.CrudformViewModel.Image, new ViewDataDictionary(ViewData) {
                         { "Label", "Image (URL)" },
+                        { "Value", Model.CrudformViewModel.Image }
                     })
 
                     <div class="flex justify-center">
