fix: Show RFC info card only for existing POIs and update approval button text

--- a/LiveMapDashboard.Web/Views/Shared/Components/RfcForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/RfcForm/Default.cshtml
@@ -66,19 +66,19 @@
 @section GridLeftContent
 {
     <div>
-        <div class="flex flex-col bg-white border border-gray-200 shadow-2xs rounded-xl dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70">
-            <div class="p-4 md:p-5">
-                <h3 class="text-lg font-bold text-gray-800 dark:text-white">
-                    Request for Change:
-                </h3>
-                <p class="mt-1 text-gray-500 dark:text-neutral-400">
-                    @Model.Rfc.Message
-                </p>
-                @* <a class="mt-2 py-2 px-3 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-hidden focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" href="#">
-                    Go somewhere
-                </a> *@
+        @if (Model.Rfc.PoiId != null)
+        {
+            <div class="flex flex-col bg-white border border-gray-200 shadow-2xs rounded-xl dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70">
+                <div class="p-4 md:p-5">
+                    <h3 class="text-lg font-bold text-gray-800 dark:text-white">
+                        Request for Change:
+                    </h3>
+                    <p class="mt-1 text-gray-500 dark:text-neutral-400">
+                        @Model.Rfc.Message
+                    </p>
+                </div>
             </div>
-        </div>
+        }
         <div class="card w-full z-10 bg-white border border-gray-200 dark:bg-neutral-900 dark:border-neutral-700 rounded-lg">
             <div class="card-body w-full h-full">
                 <div id="map" class="h-[50vh] w-full rounded-lg"></div>
@@ -200,7 +200,14 @@
                     </button>
 
                     <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
-                        Approve request and save
+                        @if (Model.Rfc.PoiId != null)
+                        {
+                            <span>Approve request and save</span>
+                        }
+                        else
+                        {
+                            <span>Approve request and create</span>
+                        }
                     </button>
                 </div>
             </div>
