fix: Fix routing issues for the poi and rfc form.

--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
@@ -76,7 +76,7 @@
 
 @section GridRightContent
 {
-    <form method="post" asp-controller="Rfc" asp-action="submit">
+    <form method="post" asp-controller="poi" asp-action="submit">
         @Html.AntiForgeryToken()
         <div asp-validation-summary="ModelOnly" class="text-red-500 mb-4"></div>
 
