--- a/LiveMapDashboard.Web/Views/Shared/Components/RfcForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/RfcForm/Default.cshtml
@@ -32,7 +32,7 @@
 {
     @if (!string.IsNullOrEmpty(Model.Rfc.Id.ToString()))
     {
-        <a asp-controller="Rfc" asp-action="Index" class="bg-transparent hover:bg-transparent py-2 text-blue-500 hover:bg-blue-600 flex justify-center items-center cursor-pointer" aria-haspopup="dialog" aria-expanded="false" aria-controls="go-back-alert" data-hs-overlay="#go-back-alert">
+        <a asp-controller="Rfc" asp-action="Index" asp-route-mapId="@Model.CrudformViewModel.MapId" class="bg-transparent hover:bg-transparent py-2 text-blue-500 hover:bg-blue-600 flex justify-center items-center cursor-pointer" aria-haspopup="dialog" aria-expanded="false" aria-controls="go-back-alert" data-hs-overlay="#go-back-alert">
             <span class="inline-flex justify-center items-center size-11 rounded-full text-blue-600 dark:text-blue-500">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-left-icon lucide-arrow-left shrink-0 size-5"><path d="m12 19-7-7 7-7"/><path d="M19 12H5"/></svg>
             </span>
@@ -49,7 +49,7 @@
         </button>
     }
 
-    @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_GoBackModal.cshtml", leaveChangesModalModel)
+    @await Html.PartialAsync("~/Views/Shared/Components/RfcForm/_GoBackModal.cshtml", leaveChangesModalModel)
 
     @if (deleteModalModel != null)
     {
