--- a/LiveMapDashboard.Web/Views/Shared/Components/MapForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/MapForm/Default.cshtml
@@ -80,6 +80,7 @@
         <div asp-validation-summary="ModelOnly" class="text-red-500 mb-4"></div>
 
         <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="Area" />
 
         <div>
             <div class="mb-6 border border-blue-500 p-4 rounded-lg">
