--- a/LiveMapDashboard.Web/Views/Shared/Components/MapForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/MapForm/Default.cshtml
@@ -148,4 +148,6 @@
             </div>
         </div>
     </form>
-    <script src="~/js/preview-map-image.js" asp-append-version="true" type="module"></script>}
+    <script src="~/js/preview-map-image.js" asp-append-version="true" type="module"></script>
+    <script src="~/js/map/park-boundaries-maplibre.js" asp-append-version="true" type="module"></script>
+}
