--- a/LiveMapDashboard.Web/Views/Shared/Components/MapForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/MapForm/Default.cshtml
@@ -64,13 +64,23 @@
 
 @section GridLeftContent
 {
-<div>
-    <div class="card w-full z-10 bg-white border border-gray-200 dark:bg-neutral-900 dark:border-neutral-700 rounded-lg">
-        <div class="card-body w-full h-full">
-            <div id="map" class="h-[50vh] w-full rounded-lg"></div>
+    <div class="flex flex-col">
+        <div class="card w-full z-10 bg-white border border-gray-200 dark:bg-neutral-900 dark:border-neutral-700 rounded-lg">
+            <div class="card-body w-full h-full">
+                <div id="map" class="h-[50vh] w-full rounded-lg"></div>
+            </div>
+        </div>
+        <div class="mt-4 p-4 card w-full z-10 bg-white border border-gray-200 dark:bg-neutral-900 dark:border-neutral-700 rounded-lg">
+            <div>
+                <button type="button" id="drawMap" class="py-2.5 sm:py-3 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none">
+                    Toggle draw border on Map
+                </button>
+                <button type="button" id="deleteBoundaries" class="py-3 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-red-500 text-white hover:bg-red-600 focus:outline-hidden focus:bg-red-600 disabled:opacity-50 disabled:pointer-events-none">
+                    Remove boundaries from map
+                </button>
+            </div>
         </div>
     </div>
-</div>
 }
 
 @section GridRightContent
