--- a/LiveMapDashboard.Web/Views/Shared/Components/MapForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/MapForm/Default.cshtml
@@ -119,7 +119,7 @@
 
             <div class="mt-1 p-4 relative z-10 bg-white border border-gray-200 rounded-xl sm:mt-4 dark:bg-neutral-900 dark:border-neutral-700">
                 <label class="text-sm font-medium text-gray-700 block mb-1 dark:text-gray-200">Map geo coordinates</label>
-                <p class="text-xs text-gray-500 dark:text-gray-400">In order to set the location of the given map image, the exact bottom and top coordinates are needed. With this the map can be and accurat representation  </p>
+                <p class="text-xs text-gray-500 dark:text-gray-400">In order to set the location of the given map image, the exact bottom and top coordinates are needed. With this the map can be an accurate representation  </p>
             
                 <div class="flex pt-4">
                     @Html.EditorFor(m => m.TopLeft, new ViewDataDictionary(ViewData) {
