--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_DeleteModal.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_DeleteModal.cshtml
@@ -1,4 +1,5 @@
-﻿@model LiveMapDashboard.Web.Models.Modal.DeleteModalViewModel
+﻿@using LiveMapDashboard.Web.Extensions;
+@model LiveMapDashboard.Web.Models.Modal.DeleteModalViewModel
 @{
     Layout = "~/Views/Shared/Layouts/Modals/_DeleteModalLayout.cshtml";
 }
