--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_GoBackModal.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_GoBackModal.cshtml
@@ -1,6 +1,9 @@
-﻿@model LiveMapDashboard.Web.Models.Modal.LeaveChangesModalViewModel
+﻿@using LiveMapDashboard.Web.Extensions;
+@model LiveMapDashboard.Web.Models.Modal.LeaveChangesModalViewModel
+
 @{
     Layout = "~/Views/Shared/Layouts/Modals/_LeaveChangesModalLayout.cshtml";
+    string mapId = Context.GetCurrentMapId()?.ToString() ?? string.Empty;
 }
 
 @section ModalContent
@@ -13,7 +16,10 @@
 @section ModalSubmitForm
 {
     <div class="mt-6 flex justify-center gap-x-4">
-        <a asp-controller="Poi" asp-action="index" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-2xs hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none focus:outline-hidden focus:bg-gray-50 dark:bg-transparent dark:border-neutral-700 dark:text-neutral-300 dark:hover:bg-neutral-800 dark:focus:bg-neutral-800">
+        <a asp-controller="Poi" 
+           asp-action="index" 
+           asp-route-mapId="@mapId"
+           class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-2xs hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none focus:outline-hidden focus:bg-gray-50 dark:bg-transparent dark:border-neutral-700 dark:text-neutral-300 dark:hover:bg-neutral-800 dark:focus:bg-neutral-800">
             Leave changes
         </a>
         <button type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-hidden focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" data-hs-overlay="#@Model.ModalId">
