--- a/LiveMapDashboard.Web/Views/Shared/_Layout.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿@inject IOptions<BackendConfigurationOptions> backendConfiguration
+﻿@using LiveMapDashboard.Web.Extensions
+@inject IOptions<BackendConfigurationOptions> backendConfiguration
+@{
+    string? mapId = Context.GetCurrentMapId()?.ToString();
+}
 
 <!DOCTYPE html>
 <html lang="en" class="dark">
@@ -36,9 +40,20 @@
         <nav class="max-w-[85rem] w-full mx-auto px-4 sm:flex sm:items-center sm:justify-between">
             <a class="flex-none font-semibold text-xl text-black focus:outline-hidden focus:opacity-80 dark:text-white" asp-area="" asp-controller="Home" asp-action="Index" aria-label="LiveMapDashboard.Web">LiveMapDashboard.Web</a>
             <div class="flex flex-row items-center gap-5 mt-5 sm:justify-end sm:mt-0 sm:ps-5">
-                <a class="font-medium text-blue-500 focus:outline-hidden" aria-current="page" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                <a class="font-medium text-gray-600 hover:text-gray-400 focus:outline-hidden focus:text-gray-400 dark:text-neutral-400 dark:hover:text-neutral-500 dark:focus:text-neutral-500" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                <a class="font-medium text-gray-600 hover:text-gray-400 focus:outline-hidden focus:text-gray-400 dark:text-neutral-400 dark:hover:text-neutral-500 dark:focus:text-neutral-500" asp-area="" asp-controller="Home" asp-action="Park">Parkbeheer</a>
+                <a class="font-medium text-blue-500 focus:outline-hidden" aria-current="page" 
+                    asp-area="" 
+                    asp-controller="Dashboard" 
+                    asp-action="Index"
+                    asp-route-mapId="@mapId">
+                    Dashboard
+                </a>
+                <a class="font-medium text-gray-600 hover:text-gray-400 focus:outline-hidden focus:text-gray-400 dark:text-neutral-400 dark:hover:text-neutral-500 dark:focus:text-neutral-500" 
+                    asp-area="" 
+                    asp-controller="poi" 
+                    asp-action="Index"
+                    asp-route-mapId="@mapId">
+                    Points of interest
+                </a>
                 <div>
                     <button type="button" class="hs-dark-mode hs-dark-mode-active:hidden flex items-center gap-x-2 py-2 px-3 bg-white/10 rounded-full text-sm dark:text-white text-dark hover:bg-white/20 focus:outline-hidden focus:bg-white/20" data-hs-theme-click-value="dark">
                         <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -73,9 +88,9 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container dark:text-white">
+       @*  <div class="container dark:text-white">
             &copy; 2025 - LiveMapDashboard.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+        </div> *@
     </footer>
 
     <script src="~/js/preline.js"></script>
