--- a/LiveMapDashboard.Web/Views/Shared/Components/CategoryForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/CategoryForm/Default.cshtml
@@ -122,7 +122,7 @@
                 })
 
                 <div id="iconSearchResults"
-                     class="mt-2 max-h-60 overflow-y-auto border border-gray-200 rounded p-2 bg-white dark:bg-neutral-900 shadow-inner text-sm">
+                     class="mt-2 max-h-60 overflow-y-auto border border-gray-200 rounded p-2 bg-white dark:bg-neutral-900 shadow-inner text-sm iconList">
                 </div>
             </div>
 
