--- a/LiveMapDashboard.Web/wwwroot/css/site.css
+++ b/LiveMapDashboard.Web/wwwroot/css/site.css
@@ -72,3 +72,8 @@ body {
     background-color: white;
     border: 2px solid black;
 }
+
+.iconList{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+}
